tests/scripts/errors/parse/bad_object_literal.cdo
VAR o = { name "Alice", age: 30 };
print(o);
